Fixed some FindBugs issues